# invoker-manager

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  \
src/: main.rs
src/server/: authorisation.rs  invokers_side.rs  mod.rs  submission.rs  testing_system_side.rs  verdict.rs
src/server/control_panel/: mod.rs
src/server/invoker/: gateway.rs  mod.rs
src/server/testing_system/: gateway.rs  mod.rs
