[package]
name = "invoker-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }
ratchet_rs = { version = "*", features = ["split"] }
ratchet_deflate = { version = "*" }
bytes = { version = "*" }
uuid = { version = "*" }
rand = { version = "*" }
env_logger = { version = "*" }
axum = { version = "*" }
log = { version = "*" }
serde = { version = "*", features = ["serde_derive"] }
serde_json = { version = "*" }
reqwest = "*"
invoker_auth = { git = "https://github.com/summer-54/invoker_auth.git" }
